[gd_scene load_steps=6 format=3 uid="uid://6xcgrn54y7si"]

[ext_resource type="Script" path="res://scenes/root/Root.gd" id="1_2xin5"]

[sub_resource type="InputEventAction" id="InputEventAction_ple52"]
action = &"j_slot1"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_jdnlo"]
events = [SubResource("InputEventAction_ple52")]

[sub_resource type="InputEventAction" id="InputEventAction_js6rf"]
action = &"j_slot2"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_lgvw8"]
events = [SubResource("InputEventAction_js6rf")]

[node name="Root" type="Node"]
script = ExtResource("1_2xin5")

[node name="UI" type="CanvasLayer" parent="."]

[node name="SelectRunMode" type="Control" parent="UI"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SelectRunMode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RunAsServerButton" type="Button" parent="UI/SelectRunMode/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_jdnlo")
text = "1 - Run as server"

[node name="RunAsClientButton" type="Button" parent="UI/SelectRunMode/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_lgvw8")
text = "2 - Run as client"
